--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /EventEase/.vs
 /EventEase/EventEase/bin/Debug/net9.0
 /EventEase/EventEase/obj
+/UserManagementAPI/.vs
+/UserManagementAPI/UserManagementAPI/bin/Debug/net9.0
+/UserManagementAPI/UserManagementAPI/obj
