activity-02-Debugging API Code with Copilot

--- a/UserManagementAPI/UserManagementAPI/appsettings.json
+++ b/UserManagementAPI/UserManagementAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=PR_HP_LAP\\PR_HP_LAP;Database=UserManagement.Api;User ID=sa;Password=India@1947&;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  }
 }
