Implementing and Managing Middleware with Copilot

--- a/UserManagementAPI/UserManagementAPI/appsettings.json
+++ b/UserManagementAPI/UserManagementAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=PR_HP_LAP\\PR_HP_LAP;Database=UserManagement.Api;User ID=sa;Password=India@1947&;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "1735C29F37554D1E8199F1DFF5B0AFECB9F7BEFE0",
+    "Issuer": "https://techhivesolutions.com",
+    "Audience": "TechHiveSolutions"
   }
 }
