Optimizing Integration Code for Performance Using Microsoft Copilot

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 /InventoryHub/InventoryHub/obj
 /InventoryHub/InventoryHub.Api/bin/Debug/net9.0
 /InventoryHub/InventoryHub.Api/obj
+/InventoryHub/.vs/ProjectEvaluation
+/InventoryHub2/.vs/InventoryHub2
+/InventoryHub2/InventoryHub2/bin/Debug/net9.0
+/InventoryHub2/InventoryHub2/obj
