Login Register Demo

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@
 /InventoryHub2/.vs/InventoryHub2
 /InventoryHub2/InventoryHub2/bin/Debug/net9.0
 /InventoryHub2/InventoryHub2/obj
+/InventoryHub2/.vs/ProjectEvaluation
+/UserAuthInMemoryApp/.vs/UserAuthInMemoryApp
+/UserAuthInMemoryApp/bin/Debug/net9.0
+/UserAuthInMemoryApp/obj
