Security and Authentication

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@
 /RoleAndClaims/.vs
 /RoleAndClaims/RoleAndClaims/bin/Debug/net9.0
 /RoleAndClaims/RoleAndClaims/obj
+/SafeVault/.vs/SafeVault
+/JwtAuthDemo/.vs/ProjectEvaluation
+/SafeVault/SafeVault/obj
+/UserAuthInMemoryApp/.vs/ProjectEvaluation
+/SafeVault/SafeVault/bin/Debug/net9.0
