--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@
 /SafeVault/SafeVault/obj
 /UserAuthInMemoryApp/.vs/ProjectEvaluation
 /SafeVault/SafeVault/bin/Debug/net9.0
+/OrderManagementSystem/.vs/OrderManagementSystem
+/OrderManagementSystem/LogiTrack.Api/bin/Debug/net9.0
+/OrderManagementSystem/LogiTrack.Api/obj
+/TaskAssignmentSystem/.vs
+/TaskAssignmentSystem/DataSturctureAndAlgo/obj
