--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /OrderManagementSystem/LogiTrack.Api/obj
 /TaskAssignmentSystem/.vs
 /TaskAssignmentSystem/DataSturctureAndAlgo/obj
+/SafeVault/.vs/ProjectEvaluation
+/TaskAssignmentSystem
