Capstone Project - Initial Create

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@
 /TaskAssignmentSystem/DataSturctureAndAlgo/obj
 /SafeVault/.vs/ProjectEvaluation
 /TaskAssignmentSystem
+/OrderManagementSystem/.vs/ProjectEvaluation
+/SkillSnap/.vs/SkillSnap
+/SkillSnap/.vs/SkillSnap/CopilotIndices/17.13.439.2385/CodeChunks.db
+/SkillSnap/obj
