Step 1: Set Up Your Full-Stack Project

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@
 /SkillSnap-backup/.vs
 /SkillSnap-backup/bin/Debug/net9.0
 /SkillSnap-backup/obj
+/SkillSnap/SkillSnap.Api/obj
+/SkillSnap/SkillSnap.Client/obj
