--- a/SkillSnap/SkillSnap.Api/appsettings.json
+++ b/SkillSnap/SkillSnap.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SkillSnapDb": "Server=PR_HP_LAP\\PR_HP_LAP;Database=Skillsnap;User ID=sa;Password=India@1947&;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  }
 }
