--- a/SkillSnap/SkillSnap.Api/appsettings.json
+++ b/SkillSnap/SkillSnap.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SkillSnapDb": "Server=PR_HP_LAP\\PR_HP_LAP;Database=Skillsnap;User ID=sa;Password=India@1947&;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "SecretKey": "356E61BB00E54770ADA1F8DF242C7C0A",
+    "Issuer": "SkillSnap",
+    "Audience": "SkillSnapUsers"
   }
 }
